Fixed workspace width and height bugs when content overflows (#122)
* Fixed workspace width when content is too wide

* Fixed Workspace title height being smaller than left nav

--- a/src/root.css
+++ b/src/root.css
@@ -7,24 +7,28 @@
   align-items: stretch;
   width: 100vw;
   height: 100vh;
+  overflow-y: scroll;
 }
 
 .chartreview {
   grid-row: 1;
   grid-column: 1;
   align-self: start;
-  overflow: auto;
-  width: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
   height: 90%;
+  padding-bottom: 10px;
 }
 
 .workspace {
   grid-row: 1;
   grid-column: 2;
   align-self: start;
-  overflow: auto;
-  height: 99%;
-  width: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 90%;
+  border-left: 0.5px solid lightgray;
+  padding-bottom: 10px;
 }
 
 .sidebar {
